--- a/content/themes/dude/sass/layout/_hero.scss
+++ b/content/themes/dude/sass/layout/_hero.scss
@@ -68,6 +68,7 @@
     overflow: visible;
     position: relative;
     z-index: 2;
+    transform: translateY(65px);
   }
 
   .hero-description {
